--- a/.render.yaml
+++ b/.render.yaml
@@ -5,6 +5,7 @@ services:
     plan: free
     buildCommand: |
       composer install --optimize-autoloader --no-dev
+      php artisan migrate --force
       php artisan config:cache
     startCommand: php artisan serve --host 0.0.0.0 --port 10000
     envVars:
