--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:qwHkV5SVdQSoe4oLV8M0P6kYbl+7lDDLMTpyskgsZoE=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
